# start7

./: .gitignore  1.ini  2.ini  README.md  pro2cmake.py  rifx.ini  server1.sql  start7.pro
Test/: Test.pro  tst_firsttest.cpp
m_cfg/: .~lock.Описание (НЕ ПОЛНОЕ) структуры файла rifx.ini.docx#  1  1.ini  MainWindowCFG.cpp  MainWindowCFG.h  MainWindowCFG.ui  adam_widget.cpp  adam_widget.h  adam_widget.ui  add_sql_user_form.cpp  add_sql_user_form.h  add_sql_user_form.ui  adm_aud_combobox.cpp  adm_aud_combobox.h  admaud_widget.cpp  admaud_widget.h  admaud_widget.ui  admkeygenerator.cpp  admkeygenerator.h  astra — копия.ini  astra.ini  backgroundimage.cpp  backgroundimage.h  comport.cpp  comport.h  dbform.cpp  dbform.h  dbform.ui  delegate.cpp  delegate.h  edit_unit_widget.cpp  edit_unit_widget.h  edit_unit_widget.ui  findunitform.cpp  findunitform.h  findunitform.ui  first_dialog.cpp  first_dialog.h  first_dialog.ui  group.cpp  (+86 more)
m_cfg/my/: my.pri  my_combobox.cpp  my_config.h  my_lineedit.cpp
m_cfg/unitWidgets/: communicationtypewidget.cpp  communicationtypewidget.h  communicationtypewidget.ui  coordinatewidget.cpp  coordinatewidget.h  coordinatewidget.ui  unitWidgets.pri  unitwidget.cpp  unitwidget.h  unitwidget.ui  widget_adam.cpp  widget_adam.h  widget_adam.ui  widget_bod_sota.cpp  widget_bod_sota.h  widget_bod_sota.ui  widget_bod_t4k_m.cpp  widget_bod_t4k_m.h  widget_bod_t4k_m.ui  widget_dd_sota.cpp  widget_dd_sota.h  widget_dd_sota.ui  widget_dd_t4k_m.cpp  widget_dd_t4k_m.h  widget_dd_t4k_m.ui  widget_devline.cpp  widget_devline.h  widget_devline.ui  widget_group.cpp  widget_group.h  widget_group.ui  widget_info_tablo.cpp  widget_info_tablo.h  widget_info_tablo.ui  widget_iu_bl_ip.cpp  widget_iu_bl_ip.h  widget_iu_bl_ip.ui  widget_kl.cpp  widget_kl.h  widget_kl.ui  (+45 more)
m_cfg/информация/: mysql driver.txt  postgresql driver.txt
m_db/: MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowDB.cpp  MainWindowDB.h  MainWindowDB.ui  m_db.pro  main.cpp  resource.qrc
m_server/: AuthenticationDialog.cpp  AuthenticationDialog.h  AuthenticationDialog.ui  CMakeLists.txt  MainWindow.cpp  MainWindow.h  MainWindow.ui  MainWindowServer.cpp  MainWindowServer.h  MainWindowServer.ui  app_ru.qm  app_ru.ts  m_server.pro  main.cpp  resource.qrc
m_server/rifx utf8/: rifx.ini
m_server/rifx win1252/: rifx.ini
rif-postgres-docker/rif-postgres-docker/: docker-compose.yml
src/: global.h  global.hpp  global.pri  src.pri  src.pro
src/ctpl/: ThreadPool.h  ctpl.pri
src/database/: DataBaseManager.cpp  DataBaseManager.h  database.pri  scheme.sql
src/entity/: JourEntity.cpp  JourEntity.h  KeyGroup.cpp  KeyGroup.h  MessageEntity.cpp  MessageEntity.h  Operator.cpp  Operator.h  ServerUnitNodeTreeItem.cpp  ServerUnitNodeTreeItem.h  TreeItem.cpp  TreeItem.h  TypeUnitNode.cpp  TypeUnitNode.h  UnitNode.cpp  UnitNode.h  UnitNodeCFG.cpp  UnitNodeCFG.h  UnitNodeFactory.cpp  UnitNodeFactory.h  UnitNodeTreeItem.cpp  UnitNodeTreeItem.h  entity.pri
src/handlerstateword/: HandlerStateWordAbstract.cpp  HandlerStateWordAbstract.h  ProcessingStateWordAbstract.cpp  ProcessingStateWordAbstract.h  handlerstateword.pri
src/icon/: check_green.pdn  circl_black.pdn  circl_blue.pdn  circl_green.pdn  circl_red.pdn  circl_yellow.pdn  cross2_black.pdn  cross2_blue.pdn  cross2_gray.pdn  cross2_green.pdn  cross2_red.pdn  cross2_yellow.pdn  cross_black.pdn  cross_blue.pdn  cross_gray.pdn  cross_green.pdn  cross_red.pdn  cross_yellow.pdn  database.pdn  folder.pdn  line_red.pdn  lock.pdn  new_duty.pdn  open.pdn  question.pdn  reset_alarm.pdn  sound_base.pdn  square_black.pdn  square_black_cross_blue.pdn  square_black_cross_gray.pdn  square_black_cross_green.pdn  square_black_cross_red.pdn  square_black_cross_red_20_20.pdn  square_black_cross_yellow.pdn  square_blue.pdn  square_blue_close.pdn  square_blue_open.pdn  square_gray.pdn  square_gray_close.pdn  square_gray_open.pdn  (+14 more)
src/port/: AbstractPort.h  AbstractPortFactory.h  ContainerRequesters.cpp  ContainerRequesters.h  DataQueueItem.cpp  DataQueueItem.h  GraphTerminal.cpp  GraphTerminal.h  Port.cpp  Port.h  PortFactory.cpp  PortFactory.h  PortManager.cpp  PortManager.h  TcpServer.cpp  TcpServer.h  port.pri
src/print/: TablePrint.cpp  TablePrint.h  print.pri
src/requester/: AbstractRequester.cpp  AbstractRequester.h  ConfirmationAdmissionWaiter.cpp  ConfirmationAdmissionWaiter.h  LockWaiter.cpp  LockWaiter.h  ManagerOneMsg.cpp  ManagerOneMsg.h  ManagerSingleMsg.cpp  ManagerSingleMsg.h  ManagerSingleMsgAlarmReset.cpp  ManagerSingleMsgAlarmReset.h  MultiUNStatusConnectRequester.cpp  MultiUNStatusConnectRequester.h  OnOffIUWaiter.cpp  OnOffIUWaiter.h  ProcessDKWaiter.cpp  ProcessDKWaiter.h  StatusConnectRequester.cpp  StatusConnectRequester.h  StatusRequester.cpp  StatusRequester.h  requester.pri
src/statewordparsers/: SWP.cpp  SWP.h  SWPAlarm.h  SWPBLIP.cpp  SWPBLIP.h  SWPBLIPType0x41.cpp  SWPBLIPType0x41.h  SWPBLIPType0x42.cpp  SWPBLIPType0x42.h  SWPCliff.h  SWPClockPeriod.h  SWPClosure.h  SWPCountImpact.h  SWPDurationOvercoming.h  SWPExistDK.h  SWPFault.h  SWPIUBLIP.cpp  SWPIUBLIP.h  SWPIUBLIPType0x41.cpp  SWPIUBLIPType0x41.h  SWPInAlarm.h  SWPInCommunicationBreak.h  SWPInNorm.h  SWPInOpened.h  SWPInterrogation.h  SWPLevel.h  SWPLineBreak.h  SWPModeProcessing.h  SWPNorm.h  SWPOff.h  SWPOn.h  SWPOpened.h  SWPOutAlarm.h  SWPOutNorm.h  SWPRLM.cpp  SWPRLM.h  SWPRLMC.cpp  SWPRLMC.h  SWPRLMCType0x31.cpp  SWPRLMCType0x31.h  (+44 more)
src/tablemodel/: ComboBoxDelegate.cpp  ComboBoxDelegate.h  ServerTableModelJour.cpp  ServerTableModelJour.h  ServerTreeModelUnitNode.cpp  ServerTreeModelUnitNode.h  TableModelMSG (копия).h  TableModelMSG.cpp  TableModelMSG.h  TreeModelUnitNode.cpp  TreeModelUnitNode.h  tablemodel.pri
Старт8 - Протоколы/: .~lock.ПРОТ_БЛ-IP (Концентратор 8x4).doc#  Замок БЛ-IP.txt  ПРОТ_БЛ-IP (Концентратор 8x4).doc  ПРОТ_БЛ-IP_(Концентратор_8x4)_Зеленым_новое_для_БЛ_ССОИ-IP.doc  ПРОТ_КЛ1 (Концентратор 4x4).doc  ПРОТ_РИФ-РЛМ-КРЛ-ТРАССА-РАЗРЫВ-485 New Takt.doc  ПРОТ_РИФ-РЛМ-С (DSP).doc  ПРОТ_Точка-Гарда.docx  ПРОТ_Точка-М-Гряда-Сота.docx  Пример отработки команды ДК.docx
(+363 files in other folders)
